# bevy-histrion-packer

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  deny.toml
.github/workflows/: ci.yml  dependencies.yml
assets/: test.test  テスト.test
assets/subdir/: ça bug.test
assets/subdir/sub_sub_dir/: b.test  bin.test
example/: Cargo.toml  build.rs
example/assets/sub/: 图.text
example/src/: main.rs
example/text_asset/: Cargo.toml
example/text_asset/src/: lib.rs
examples/demo/: Cargo.toml  build.rs
examples/demo/src/: main.rs
fuzz/: test.png.deflate  test.png.zlib
src/: assets_reader.rs  encoding.rs  errors.rs  hpak.rs  lib.rs  utils.rs
src/format/: mod.rs  reader.rs  writer.rs
src/hpak/: compression.rs  encoder.rs  entry.rs  header.rs  mod.rs  read.rs  reader.rs  write.rs  writer.rs
