[package]
name = "bevy-histrion-packer"
authors = ["Ludwig DUBOS <ludwig.dubos@pm.me>"]
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "assets", "packer", "bundler", "zlib"]
categories = ["game-development", "compression", "encoding"]
repository = "https://github.com/ldubos/bevy-histrion-packer"
documentation = "https://docs.rs/bevy-histrion-packer"
description = "A Bevy Plugin to pack all your game assets into a single common PAK like file format."
exclude = [
  "example/",
  "fuzz/",
  ".github/",
  "rustfmt.toml",
  "deny.toml",
  ".editorconfig",
  ".rust-analyzer",
]

[features]
default = ["deflate", "writer"]
deflate = ["dep:zopfli", "dep:flate2", "dep:parking_lot"]
writer = []

[dependencies]
flate2 = { version = "1.1", optional = true }
futures-io = "0.3"
futures-lite = "2.6"
memmap2 = "0.9"
parking_lot = { version = "0.12", optional = true }
thiserror = "2.0"
zopfli = { version = "0.8", default-features = false, features = [
  "std",
  "zlib",
], optional = true }

[dependencies.bevy]
version = "0.16"
default-features = false
features = ["bevy_asset", "bevy_log", "std"]

[dev-dependencies]
rstest = "0.25"
futures = "0.3"
