[package]
name = "bevy-histrion-packer"
authors = ["Ludwig DUBOS <ludwig.dubos@pm.me>"]
version = "0.7.0-dev"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "assets", "packer", "bundler", "zlib"]
categories = ["game-development", "compression", "encoding"]
repository = "https://github.com/ldubos/bevy-histrion-packer"
documentation = "https://docs.rs/bevy-histrion-packer"
description = "A Bevy Plugin to pack all your game assets into a single common PAK like file format."
exclude = [
  ".github/",
  "example/",
  "fuzz/",
  ".editorconfig",
  "*.hpak",
  "CHANGELOG.md",
  "deny.toml",
  "rustfmt.toml",
]

[features]
default = ["writer"]
writer = []

[dependencies]
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
futures-io = "0.3"
futures-lite = "2.6"
memmap2 = "0.9"
parking_lot = { version = "0.12" }
thiserror = "2.0"
zopfli = { version = "0.8", default-features = false, features = [
  "std",
  "zlib",
] }

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "2285632"
default-features = false
features = ["bevy_asset", "bevy_log", "std"]

[dev-dependencies]
futures = "0.3"
rstest = "0.26"
