[package]
name = "bevy-histrion-packer"
authors = ["Ludwig DUBOS <ludwig.dubos@pm.me>"]
version = "0.7.1"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "assets", "packer", "bundler", "zlib"]
categories = ["game-development", "compression", "encoding"]
repository = "https://github.com/ldubos/bevy-histrion-packer"
documentation = "https://docs.rs/bevy-histrion-packer"
description = "A Bevy Plugin to pack all your game assets into a single common PAK like file format."
exclude = [
  ".github/",
  "example/",
  "fuzz/",
  ".editorconfig",
  "*.hpak",
  "CHANGELOG.md",
  "deny.toml",
  "rustfmt.toml",
]

[features]
default = ["writer"]

# Enables the ability to create HPAK archives using the HpakWriter API
writer = []

# Implement the `Debug` trait for applicable types.
debug-impls = []

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
futures-io = "0.3"
futures-lite = "2.6"
memmap2 = "0.9"
parking_lot = { version = "0.12" }
thiserror = "2.0"
zopfli = { version = "0.8", default-features = false, features = [
  "std",
  "zlib",
] }

[dependencies.bevy]
version = "0.17"
default-features = false
features = ["bevy_asset", "bevy_log", "std"]

[dev-dependencies]
futures = "0.3"
rstest = "0.26"
