[workspace]
members = ["text_asset", "."]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
bevy = { version = "0.16", default-features = false }

[package]
name = "example"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true, default-features = false, features = [
  "bevy_asset",
  "multi_threaded",
] }
text_asset = { path = "text_asset" }
bevy-histrion-packer = { path = "../" }

[build-dependencies]
bevy = { workspace = true, default-features = true, features = [
  "asset_processor",
  "file_watcher",
  "embedded_watcher",
] }
text_asset = { path = "text_asset" }
bevy-histrion-packer = { path = "../" }
