[workspace]
members = ["text_asset", "."]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[workspace.dependencies.bevy]
version = "0.17"
default-features = false
features = ["bevy_asset", "multi_threaded", "reflect_auto_register"]

[package]
name = "example"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
bevy.workspace = true
bevy-histrion-packer = { path = "../", default-features = false }
text_asset = { path = "text_asset" }

[build-dependencies]
bevy = { workspace = true, default-features = true, features = [
  "asset_processor",
] }
bevy-histrion-packer = { path = "../" }
text_asset = { path = "text_asset" }
